# fstapi

./: .gitignore  .pylintrc  LICENSE  README.md  model_card_template.md  pyproject.toml  query_live_api.py  requirements.txt
.github/workflows/: workflow.yml
data/: census.csv.dvc
deployment/: data_for_scoring.csv  data_for_scoring.csv.dvc
simple_eda/: census.ipynb
src/: train_model.py
src/API/: __init__.py  endpoints.py  utils.py
src/ingest/: __init__.py  download_data.py
src/ml/: __init__.py  data.py  model.py
tests/: conftest.py  test_API.py  test_ingest.py  test_ml.py
