[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fstapi"
version = "0.0.0"
description = "ML project to be deployed in fastapi"
authors = [{ name="mahrts" }]
dependencies = [
    "fastapi==0.136.0",
    "joblib==1.5.3",
    "numpy==2.4.4",
    "pandas==3.0.2",
    "pydantic==2.13.3",
    "scikit_learn==1.8.0",
    "ucimlrepo==0.0.7"
]

[tool.setuptools.packages.find]
where = ["src"]
